--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
   "name": "custom-server-koa",
   "version": "1.0.0",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server/index.js",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "cross-env NODE_ENV=production node server/index.js"
   },
   "dependencies": {
     "@koa/router": "^10.0.0",
     "cross-env": "^5.2.0",
     "koa": "^2.13.0",
+    "koa-logger": "^3.2.1",
     "next": "latest",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.14.21",
+    "@types/react": "^17.0.0",
+    "nodemon": "^2.0.7",
+    "typescript": "^4.1.3"
+  }
 }
