--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "custom-server-koa",
+  "name": "next-koa-typescript",
   "version": "1.0.0",
   "scripts": {
     "dev": "nodemon server/index.js",
-    "build": "next build",
-    "start": "cross-env NODE_ENV=production node server/index.js"
+    "babel:server": "babel server --out-dir .next/server --verbose",
+    "babel": "npm run babel:server",
+    "dist": "mkdir dist && mv .next dist && cp -r .nvmrc package.json yarn.lock dist",
+    "build": "rm -rf .next dist && npm run babel && NEXT_TELEMETRY_DISABLED=1 next build && npm run dist",
+    "start": "node dist/.next/server/index.js"
   },
   "dependencies": {
     "@koa/router": "^10.0.0",
@@ -15,10 +18,15 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-  "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/node": "^14.14.21",
     "@types/react": "^17.0.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
   }
